# personal-assistant

./: .env.example  .gitignore  CONNECTORS_SETUP.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SIGNAL_FLOW_PROGRESS.md  TELEGRAM_IMPLEMENTATION.md  check_all_schemas.py  check_schema.py  count_records.py  docker-compose.yml  dpersonal-assistant.env.example  dpersonal-assistantMakefile  dpersonal-assistantdocker-compose.yml  pyproject.toml
.data/qdrant/: raft_state.json
.github/workflows/: ci.yml
.mandiriaisdlc/plans/: enhanced-ask-flow.md
config/: settings.toml  topics.toml
docs/: CONNECTORS.md  DAEMON.md  DEV_SETUP.md  MIGRATION_CHECKLIST.md  POSTGRES_MIGRATION_README.md  WEB_API.md  agent.architecture-guide.md  brainstorming-agent.profile-and-plan.md  documentation-plan.md  personal-assistant.implementation.md  personal-assistant.plans.md  plans.implementation-comprehensive.md  telegram-gateway.implementation.comprehensive-setup.md  telegram-gateway.rfc.mini-app-architecture.md
docs/_archive/: DAEMON.md  DAEMON_SETUP.md  DATABASE_MIGRATION_SQLITE_TO_POSTGRES.md  IMPLEMENTATION_OVERVIEW.md  IMPLEMENTATION_QUICK_INDEX.md  IMPLEMENTATION_STATUS.md  LOGGING_IMPLEMENTATION.md  POSTGRES_IMPLEMENTATION_SUMMARY.md  POSTGRES_MIGRATION_START_HERE.md  POSTGRES_SETUP.md  SYSTEM_DOCUMENTATION.md  database_migration.md  personal-assistant.brainstorm-feature.md  research-agent.data-model.md  (+2 more)
frontend/: .env.example  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
scripts/: init_postgres_schema.py  migrate_to_postgres.py  migrate_to_unified_db.py
src/: __init__.py  main_engine.py
tests/: __init__.py  conftest.py  test_brainstorming_agent.py  test_core.py  test_enhanced_ask.py  test_research_agent.py  test_research_connectors.py  test_research_skills.py  test_research_store.py  test_signal_flow.py  test_skills.py  test_store.py  test_unified_store.py
(+118 files in other folders)
